Configuration saving and loading is complete. Loading arrays works only for float[][]. Support for more array types can be added in Creator.java